Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,8 @@
    },
    "outputs": [],
    "source": [
-    "travel_month = None"
+    "travel_month = January\n",
+    "travel_mont"
    ]
   },
   {
